--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 
   gtag('config', 'UA-106365837-4');
 </script>
-{% include footer.html %}
+{% include_relative footer.html %}
 </body>
 
 </html>
