--- a/footer.html
+++ b/footer.html
@@ -1,1 +1,3 @@
-<h1><big>TESTING</big></h1>
+<p>Copyright &copy; 2002-<script type="text/javascript">
+  document.write(new Date().getFullYear());
+  </script> by Edgewood Associates</p>
